=== 5.67.0 (2023-04-01)

* Fix dumping of string column sizes in the schema dumper on MSSQL (jeremyevans) (#2013)

* Improve dumping of tables in non-default schemas in the schema_dumper extension (jeremyevans) (#2006)

* Make Database#{tables,views} support :qualify option on Microsoft SQL Server (jeremyevans)

* Avoid use of singleton classes for datasets instances on Ruby 2.4+ (jeremyevans) (#2007)

* Deprecate registering datasets extensions using an object other than a module (jeremyevans)

* Add set_literalizer extension, for treating set usage in datasets similar to array usage (jeremyevans) (#1997)

=== 5.66.0 (2023-03-01)

* Recognize SQLite error related to strict tables as a constraint violation when using the amalgalite adapter (jeremyevans)

* Make Dataset#count work correctly for datasets using Dataset#values (jeremyevans) (#1992)

* Make Dataset#count with no argument/block handle dataset with custom SQL using ORDER BY on MSSQL (jeremyevans)

* Make Dataset#empty? correctly handle datasets with custom SQL or using Dataset#values where the first value is NULL (andy-k, jeremyevans) (#1990)

=== 5.65.0 (2023-02-01)

* Allow pg_auto_parameterize extension to use placeholder loaders (jeremyevans)

* Do not include :min_value and :max_value schema entries for decimal/numeric columns on MySQL versions not supporting check constraints (jeremyevans)

* Make Database#indexes return indexes for partitioned tables on PostgreSQL 11+ (jeremyevans)

=== 5.64.0 (2023-01-01)

* Make :db_type column schema entries on SQLAnywhere include precision/scale information (jeremyevans)

* Include :min_value and :max_value schema entries for decimal/numeric columns on most databases (rolftimmermans, jeremyevans) (#1975)

* Support :graph_use_association_block association option to make eager_graph use the association block (jeremyevans)

* Make many_through_many and many_through_one associations support eager_graph callbacks (jeremyevans)

=== 5.63.0 (2022-12-01)
